tweeks to tmux and vim config

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -5,24 +5,28 @@ set -g mouse on
 # this makes escape quicker
 set -g escape-time 10
 
+# remap prefix from 'C-b' to 'C-j'
+unbind C-b
+set-option -g prefix C-j
+bind-key C-j send-prefix
+
 # BINDINGS
 # split window horizontally
-bind - split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 # split window vertically
-bind | split-window -h -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 # reload tmux conifg
 bind r source-file ~/.tmux.conf
-# move panes with ctrl+hjkl
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-# resize panes with prefix + hjkl
-bind  h resize-pane -L 5
-bind  j resize-pane -D 5
-bind  k resize-pane -U 5
-bind  l resize-pane -R 5
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# switch windows using Alt-arrow without prefix
+bind -n S-left prev
+bind -n S-right next
 
 # Renumber windows when one is closed
 set-option -g renumber-windows on
