--- a/config/gitconf/git.config
+++ b/config/gitconf/git.config
@@ -1,8 +1,17 @@
-[include]
-	path = /home/ubuntu/git/personal/dotfiles/config/gitconf/gitconfig.general
+[user]
+        name = max-kaufmann 
+        email = max.a.kaufmann@gmail.com 
+[core]
+        editor = vim
+        pager = delta
 
-[includeIf "gitdir:~/git/work/"]
-	path = ~/git/personal/dotfiles/config/gitconf/gitconfig.work	
-
-[includeIf "gitdir:~/git/personal/"]
-	path = ~/git/personal/dotfiles/config/gitconf/gitconfig.personal
+[interactive]
+        diffFilter = delta --color-only
+[delta]
+        navigate = true
+        line-numbers = true
+        side-by-side = true
+[diff]
+        colorMoved = default
+[merge]
+        conflictstyle = diff3
