--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -19,7 +19,7 @@ bind -n M-Down select-pane -D
 # switch windows using Alt-arrow without prefix
 bind -n S-left prev
 bind -n S-right next
-
+set-option -g history-limit 20000
 # Renumber windows when one is closed
 set-option -g renumber-windows on
 
