--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -38,3 +38,4 @@ set -ga terminal-overrides ",xterm-256color*:Tc";
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+set-option -g prefix C-b
