adding a sbatch with prompted array size

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,7 +1,8 @@
 # Tmux lags the esc for some reason which is annoying for vim
 # this makes escape quicker
 set -g escape-time 10
-
+setw -g mode-mouse on
+set -g mouse-select-pane on
 # BINDINGS
 # split window horizontally
 bind s split-window -v -c "#{pane_current_path}"
